welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: Missing closing brace `}' assumed here
var fini : Boolean = false
^BDRBuggle:5: error: '(' expected but identifier found.
if lit message = "R" 
   ^BDRBuggle:7: error: illegal start of simple expression
	}
        ^BDRBuggle:8: error: ')' expected but '}' found.
}
^