welcome.lessons.welcome.bdr.BDR.scala.code
var fini : Boolean = false
while (fini != true )
if (
{ litMessage()
if lit message = "R"